[gd_scene load_steps=16 format=3 uid="uid://cxcrjex4an864"]

[ext_resource type="Script" path="res://scripts/ui/labels.gd" id="1_lg2s1"]
[ext_resource type="FontFile" uid="uid://bubsr6qt7it2s" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_sh6ii"]
[ext_resource type="Script" path="res://scripts/managers/gameManager.gd" id="3_u82y4"]
[ext_resource type="Script" path="res://scripts/managers/spawnManager.gd" id="4_yfrek"]
[ext_resource type="PackedScene" uid="uid://d2s27mvl1mawi" path="res://scenes/reusables/enemy.tscn" id="5_66xwf"]
[ext_resource type="Script" path="res://scripts/managers/projectileManager.gd" id="6_364t2"]
[ext_resource type="PackedScene" uid="uid://c2s0g0prrujx2" path="res://scenes/reusables/projectile.tscn" id="7_wi3hl"]
[ext_resource type="PackedScene" uid="uid://1kw71boj5cia" path="res://scenes/player.tscn" id="8_ltx43"]
[ext_resource type="Texture2D" uid="uid://bgbpq11q8go3y" path="res://assets/sprites/world_tileset.png" id="9_nfkrd"]
[ext_resource type="Texture2D" uid="uid://dsksmdddjnt0d" path="res://assets/sprites/progress_bar.png" id="10_hubbg"]
[ext_resource type="AudioStream" uid="uid://buwumnlaxpehr" path="res://assets/music/Goblins_Dance_(Battle).wav" id="11_17lop"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bol7g"]
a = Vector2(-301, -3)
b = Vector2(300, -3)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_j0dbo"]
a = Vector2(0, -305)
b = Vector2(0, 303)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_devmi"]
texture = ExtResource("9_nfkrd")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_ybaj2"]
sources/0 = SubResource("TileSetAtlasSource_devmi")

[node name="game" type="Node2D"]

[node name="boundaries" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="boundaries"]
position = Vector2(0, 333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundaries/StaticBody2D"]
shape = SubResource("SegmentShape2D_bol7g")

[node name="StaticBody2D2" type="StaticBody2D" parent="boundaries"]
position = Vector2(0, -244)

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundaries/StaticBody2D2"]
shape = SubResource("SegmentShape2D_bol7g")

[node name="StaticBody2D3" type="StaticBody2D" parent="boundaries"]
position = Vector2(-288, 41)

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundaries/StaticBody2D3"]
shape = SubResource("SegmentShape2D_j0dbo")

[node name="StaticBody2D4" type="StaticBody2D" parent="boundaries"]
position = Vector2(1, 36)

[node name="CollisionShape2D" type="CollisionShape2D" parent="boundaries/StaticBody2D4"]
position = Vector2(288, 5)
shape = SubResource("SegmentShape2D_j0dbo")

[node name="Labels" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_lg2s1")

[node name="levelLabel" type="Label" parent="Labels"]
offset_left = -50.0
offset_top = -342.0
offset_right = 54.0
offset_bottom = -319.0
theme_override_fonts/font = ExtResource("2_sh6ii")
text = "LEVEL 1"

[node name="scoreLabel" type="Label" parent="Labels"]
offset_left = -341.0
offset_top = -343.0
offset_right = -225.0
offset_bottom = -320.0
theme_override_fonts/font = ExtResource("2_sh6ii")
text = "Score: 0"

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_u82y4")

[node name="Timer" type="Timer" parent="GameManager"]
one_shot = true

[node name="SpawnManager" type="Node" parent="."]
script = ExtResource("4_yfrek")
enemy_scene = ExtResource("5_66xwf")

[node name="SpawnPos1" type="Marker2D" parent="SpawnManager"]
position = Vector2(-360, 50)

[node name="SpawnPos2" type="Marker2D" parent="SpawnManager"]
position = Vector2(360, 50)

[node name="SpawnPos3" type="Marker2D" parent="SpawnManager"]
position = Vector2(10, 400)

[node name="SpawnPos4" type="Marker2D" parent="SpawnManager"]
position = Vector2(10, -400)

[node name="ProjectileManager" type="Node" parent="."]
script = ExtResource("6_364t2")
projectile_scene = ExtResource("7_wi3hl")

[node name="GameOverPanel" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
z_index = 5
position = Vector2(6, 2)

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
offset_left = -175.0
offset_top = -18.0
offset_right = 176.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("2_sh6ii")
theme_override_font_sizes/font_size = 40
text = "GAME OVER"

[node name="RestartButton" type="Button" parent="GameOverPanel"]
offset_left = -99.0
offset_top = 37.0
offset_right = 98.0
offset_bottom = 65.0

[node name="Label" type="Label" parent="GameOverPanel/RestartButton"]
layout_mode = 0
offset_left = 21.0
offset_top = 4.0
offset_right = 176.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_sh6ii")
theme_override_font_sizes/font_size = 20
text = "Restart?"

[node name="Player" parent="." instance=ExtResource("8_ltx43")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.25, 1.25)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 41)
tile_set = SubResource("TileSet_ybaj2")
format = 2
layer_0/name = "Background"
layer_0/tile_data = PackedInt32Array(-1179667, 524288, 1, -1179666, 524288, 1, -1179665, 524288, 1, -1179664, 524288, 1, -1179663, 524288, 1, -1179662, 524288, 1, -1179661, 524288, 1, -1179660, 524288, 1, -1179659, 524288, 1, -1179658, 524288, 1, -1179657, 524288, 1, -1179656, 524288, 1, -1179655, 524288, 1, -1179654, 524288, 1, -1179653, 524288, 1, -1179652, 524288, 1, -1179651, 524288, 1, -1179650, 524288, 1, -1245182, 524288, 1, -1245181, 524288, 1, -1245180, 524288, 1, -1245179, 524288, 1, -1245178, 524288, 1, -1245177, 524288, 1, -1245176, 524288, 1, -1245175, 524288, 1, -1245174, 524288, 1, -1245173, 524288, 1, -1245172, 524288, 1, -1245171, 524288, 1, -1245170, 524288, 1, -1245169, 524288, 1, -1245168, 524288, 1, -1245167, 524288, 1, -1245166, 524288, 1, -1179630, 524288, 1, -1114094, 524288, 1, -1048558, 524288, 1, -983022, 524288, 1, -917486, 524288, 1, -851950, 524288, 1, -786414, 524288, 1, -720878, 524288, 1, -655342, 524288, 1, -589806, 524288, 1, -524270, 524288, 1, -458734, 524288, 1, -393198, 524288, 1, -327662, 524288, 1, -262126, 524288, 1, -196590, 524288, 1, -131054, 524288, 1, 131090, 524288, 1, 196626, 524288, 1, 262162, 524288, 1, 327698, 524288, 1, 393234, 524288, 1, 458770, 524288, 1, 524306, 524288, 1, 589842, 524288, 1, 655378, 524288, 1, 720914, 524288, 1, 786450, 524288, 1, 851986, 524288, 1, 917522, 524288, 1, 983058, 524288, 1, 1048594, 524288, 1, 1114130, 524288, 1, 1179666, 524288, 1, 1245165, 524288, 1, 1245166, 524288, 1, 1245167, 524288, 1, 1245168, 524288, 1, 1245169, 524288, 1, 1245170, 524288, 1, 1245171, 524288, 1, 1245172, 524288, 1, 1245173, 524288, 1, 1245174, 524288, 1, 1245175, 524288, 1, 1245176, 524288, 1, 1245177, 524288, 1, 1245178, 524288, 1, 1245179, 524288, 1, 1245180, 524288, 1, 1245181, 524288, 1, 1245182, 524288, 1, 1179650, 524288, 1, 1179651, 524288, 1, 1179652, 524288, 1, 1179653, 524288, 1, 1179654, 524288, 1, 1179655, 524288, 1, 1179656, 524288, 1, 1179657, 524288, 1, 1179658, 524288, 1, 1179659, 524288, 1, 1179660, 524288, 1, 1179661, 524288, 1, 1179662, 524288, 1, 1179663, 524288, 1, 1179664, 524288, 1, 1179665, 524288, 1, -1114131, 524288, 1, -1048595, 524288, 1, -983059, 524288, 1, -917523, 524288, 1, -851987, 524288, 1, -786451, 524288, 1, -720915, 524288, 1, -655379, 524288, 1, -589843, 524288, 1, -524307, 524288, 1, -458771, 524288, 1, -393235, 524288, 1, -327699, 524288, 1, -262163, 524288, 1, -196627, 524288, 1, -131091, 524288, 1, -65555, 524288, 1, 196589, 524288, 1, 262125, 524288, 1, 327661, 524288, 1, 393197, 524288, 1, 458733, 524288, 1, 524269, 524288, 1, 589805, 524288, 1, 655341, 524288, 1, 720877, 524288, 1, 786413, 524288, 1, 851949, 524288, 1, 917485, 524288, 1, 983021, 524288, 1, 1048557, 524288, 1, 1114093, 524288, 1, 1179629, 524288, 1)

[node name="TimerBar" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -299)
scale = Vector2(1, 0.5)
texture = ExtResource("10_hubbg")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_17lop")
volume_db = 5.0
autoplay = true

[connection signal="level_completed" from="GameManager" to="SpawnManager" method="_on_game_manager_level_completed"]
[connection signal="pressed" from="GameOverPanel/RestartButton" to="GameManager" method="_on_restart_button_pressed"]
